--- a/panel/views/login.ejs
+++ b/panel/views/login.ejs
@@ -1,63 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Panel - Login</title>
-    <link href="/static/styles/panel.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed|Roboto+Mono" rel="stylesheet">
-    <style>.error { display: none; }</style>
-    <script src="/static/scripts/jquery/3.1.1.js"></script>
-    <script>
-        $(function() {
-            $("#form").on("submit", function(event) {
-                event.preventDefault();
-                var username = $("#username").val();
-                var password = $("#password").val();
-
-                if (!username || !password) {
-                    $(".error").show();
-                    $("#errmsg").text("Baka! You have to fill in the boxes. uwu");
-                    return;
-                }
-
-                $.post("/api/login", { username: username, password: password }, function(data) {
-                    if (data.ok) {
-                        window.location.replace("/panel/me");
-                    } else {
-                        $(".error").show();
-                        $("#errmsg").text(data.error);
-                        return;
-                    }
-                });
-
-                return;
-            });
-        });
-    </script>
+  <meta charset="utf-8">
+  <title>Sherlock</title>
+  <link href="/static/styles/login.css" rel="stylesheet">
+  <link href="https://use.typekit.net/fjt0pow.css" rel="stylesheet">
+  <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
+  <script src="/static/scripts/jquery/3.1.1.js"></script>
 </head>
 <body>
 
-    <div class="login">
-        <div class="box">
-            <div class="brand">
-                <img src="/static/images/logo2.svg" height="128px">
-            </div>
-
-            <div class="error">
-                <span id="errmsg"></span>
-            </div>
-
-            <div class="inputs">
-                <form target="" id="form">
-                    <input id="username" type="text" placeholder="Username" name="username" required autocomplete="off">
-                    <input id="password" type="password" placeholder="Password" name="password" required autocomplete="off">
-                    <div class="buttons">
-                        <a href="/panel/register"><button type="button">Register</button></a>
-                        <input type="submit" value="Submit">
-                    </div>
-                </form>
-            </div>
-        </div>
+  <div class="container">
+    <div class="header">
+      <img src="/static/images/logo.svg" height="72px">
+      <div class="title">Sherlock</div>
     </div>
+    <div class="errors"></div>
+    <div class="form">
+      <form target="" id="form">
+        <input id="username" type="text" placeholder="Username" name="username" required>
+        <input id="password" type="password" placeholder="Password" name="password" required>
+        <div class="submit">
+          <input type="submit" value="Let's Go →">
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script>
+    $("#form").on("submit", function(event) {
+      event.preventDefault();
+      var username = $("#username").val();
+      var password = $("#password").val();
+      var payload = { username: username, password: password };
+
+      if (!username || !password) {
+        $(".error").show();
+        $("#errmsg").text("Baka! You have to fill in the boxes. uwu");
+        return;
+      }
+
+      $.post("/api/login", payload, function(data) {
+        if (data.ok) {
+          window.location.replace("/panel/me");
+        } else {
+          $(".error").show();
+          $("#errmsg").text(data.error);
+          return;
+        }
+      });
+
+      return;
+    });
+  </script>
 
 </body>
 </html>
