--- a/panel/views/partials/sidebar.ejs
+++ b/panel/views/partials/sidebar.ejs
@@ -1,7 +1,7 @@
 <li>User</li>
 <ul>
     <a href="/panel/me"><li <% if (active === "me") { %>class="active"<% } %>>My Account</li></a>
-    <!--<a href="/panel/logout"><li>Logout</li></a>-->
+    <a href="/panel/logout" id="logout"><li>Log Out</li></a>
     <!--<a href="/panel/user/edit"><li <% if (active === "users_chgpswd") { %>class="active"<% } %>>Change Password</li></a>-->
 </ul>
 
