Minor changes to colours and layout

--- a/panel/views/docs_radar.ejs
+++ b/panel/views/docs_radar.ejs
@@ -5,7 +5,7 @@
 <br>
 
 <h3>Endpoint</h3>
-<pre><code>/api/radar</pre></code>
+<pre><code>/api/radar</code></pre>
 
 <br>
 
@@ -50,7 +50,7 @@
     method: "GET",
     uri: "https://api.kurisubrooks.com/api/radar",
     encoding: null
-});</pre></code>
+});</code></pre>
 
 <br>
 
@@ -65,7 +65,7 @@
 {
     ok: false,
     error: "Unknown Image Type"
-}</pre></code>
+}</code></pre>
 <blockquote>The provided value in the "type" field is not a valid image type</blockquote>
 
 <br>
@@ -75,7 +75,7 @@
 {
     ok: false,
     error: "Unsupported Location"
-}</pre></code>
+}</code></pre>
 <blockquote>The provided value in the "id" field is not a valid/supported location</blockquote>
 
 <br>
@@ -85,7 +85,7 @@
 {
     ok: false,
     error: "Internal Server Error"
-}</pre></code>
+}</code></pre>
 <blockquote>Something went wrong backend, this may occur if the weather data is corrupt. Try again later!</blockquote>
 
 
