--- a/panel/views/docs_translate.ejs
+++ b/panel/views/docs_translate.ejs
@@ -5,7 +5,7 @@
 <br>
 
 <h3>Endpoint</h3>
-<pre><code>/api/translate</pre></code>
+<pre><code>/api/translate</code></pre>
 
 <br>
 
@@ -59,7 +59,7 @@
         to: "Japanese",
         query: "Hello, World!"
     }
-});</pre></code>
+});</code></pre>
 
 <br>
 
@@ -285,7 +285,7 @@
 {
     ok: false,
     error: "Missing 'query' field"
-}</pre></code>
+}</code></pre>
 <blockquote>Request was missing the "query" field from the body/params</blockquote>
 
 <br>
@@ -295,7 +295,7 @@
 {
     ok: false,
     error: "Missing 'to' lang field"
-}</pre></code>
+}</code></pre>
 <blockquote>Request was missing the "to" field from the body/params</blockquote>
 
 <br>
@@ -305,7 +305,7 @@
 {
     ok: false,
     error: "Unknown 'to' Language"
-}</pre></code>
+}</code></pre>
 <blockquote>The provided value in the "to" field is not a resolvable language</blockquote>
 
 <br>
@@ -315,7 +315,7 @@
 {
     ok: false,
     error: "Unknown 'from' Language"
-}</pre></code>
+}</code></pre>
 <blockquote>The provided value in the "from" field is not a resolvable language</blockquote>
 
 <br>
@@ -325,7 +325,7 @@
 {
     ok: false,
     error: "Internal Server Error"
-}</pre></code>
+}</code></pre>
 <blockquote>Something went wrong backend, this may occur due to a malformed request</blockquote>
 
 
