--- a/panel/views/docs_weather.ejs
+++ b/panel/views/docs_weather.ejs
@@ -5,7 +5,7 @@
 <br>
 
 <h3>Endpoint</h3>
-<pre><code>/api/weather</pre></code>
+<pre><code>/api/weather</code></pre>
 
 <br>
 
@@ -41,7 +41,7 @@
     method: "POST",
     uri: "https://api.kurisubrooks.com/api/weather",
     json: true
-});</pre></code>
+});</code></pre>
 
 <br>
 
@@ -187,7 +187,7 @@
 {
     ok: false,
     error: "Internal Server Error"
-}</pre></code>
+}</code></pre>
 <blockquote>Something went wrong backend, this may occur if the weather data is corrupt. Try again later!</blockquote>
 
 
