--- a/panel/views/layout.ejs
+++ b/panel/views/layout.ejs
@@ -26,7 +26,7 @@
     </div>
 
     <div class="content">
-      <div class="main">
+      <div class="wrapper">
         <%- include(content, data) %>
       </div>
     </div>
