--- a/public/static/styles/panel.css
+++ b/public/static/styles/panel.css
@@ -31,7 +31,7 @@ body {
   z-index: 10;
   width: 100%;
   height: 54px;
-  background: #37383C;
+  background: #1A1A1A;
   box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
   padding-left: 30px;
   user-select: text;
@@ -45,6 +45,7 @@ body {
 
 .container .header .navigation {
   margin-left: -5px;
+  font-weight: 500;
 }
 
 .container .sidebar {
@@ -52,7 +53,7 @@ body {
   height: 100%;
   width: 260px;
   padding-top: 62px;
-  background: linear-gradient(180deg, #2E3135 0%, #1D1D1D 100%);
+  background: #242424;
   box-shadow: 0px 4px 13px -2px rgba(0, 0, 0, 0.25);
   overflow-x: hidden;
   overflow-y: auto;
@@ -98,27 +99,26 @@ body {
 
 .container .sidebar ul ul li.active,
 .container .sidebar ul ul li:hover {
-  background: #36383E;
+  background: #323232;
 }
 
 .container .content {
-  position: relative;
-  z-index: 2;
   display: inline-flex;
+  position: relative;
   flex-direction: column;
   flex-wrap: nowrap;
+  z-index: 2;
   height: 100%;
   width: calc(100% - 260px);
-  padding-top: 52px;
+  background: #2E2E2F;
+  border-left: 1px solid #252627;
+  box-shadow: 0px 4px 13px -2px rgba(0, 0, 0, 0.25);
 }
 
-.container .content .main {
+.container .content .wrapper {
   display: block;
   flex-grow: 1;
-  padding: 22px 24px;
-  background: #2D2F33;
-  box-shadow: 0px 4px 13px -2px rgba(0, 0, 0, 0.25);
-  border-left: 1px solid #37383C;
+  padding: 78px 22px 24px;
   overflow-y: auto;
 }
 
