--- a/panel/views/system.ejs
+++ b/panel/views/system.ejs
@@ -43,7 +43,7 @@ $(function() {
 
 <br>
 
-<button id="generate">Generate Registration Key</button>
+<button id="generate" class="active">Generate Registration Key</button>
 <button id="restart">Restart</button>
 <button id="reload" disabled>Reload Endpoints</button>
 
